--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SopaDeLetras2" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/darkModePrimary</item>
+        <item name="colorPrimaryVariant">@color/darkModeBackgroundColorVariant</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/darkModeTextColor</item>
+        <item name="colorSecondaryVariant">@color/darkModeTextColorVariant</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:windowBackground">@color/darkModeBackgroundColor</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 </resources>
