--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SopaDeLetras2" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/defaultBackgroundColor</item>
+        <item name="colorPrimaryVariant">@color/defaultBackgroundColorVariant</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/defaultTextColor</item>
+        <item name="colorSecondaryVariant">@color/defaultTextColorVariant</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:windowBackground">@color/defaultBackgroundColor</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="Theme.SopaDeLetras2" parent="Base.Theme.SopaDeLetras2" />
