--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <GridLayout
-        android:id="@+id/lettersGrid"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/lettersCardView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:columnCount="6"
+        android:layout_margin="16dp"
         android:padding="16dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/findWordsGrid"></GridLayout>
+        app:layout_constraintBottom_toTopOf="@id/resetButton">
+
+        <GridLayout
+            android:id="@+id/lettersGrid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="6"
+            android:padding="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/findWordsGrid"></GridLayout>
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/resetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginBottom="536dp"
         android:text="Reiniciar"
         app:layout_constraintBottom_toTopOf="@id/findWordsGrid"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"/>
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <GridLayout
         android:id="@+id/findWordsGrid"
