--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,14 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:windowBackground">@color/defaultBackgroundColor</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="toolbarStyle">@style/ToolbarTheme</item>
+    </style>
+
+    <!-- Custom Toolbar theme -->
+    <style name="ToolbarTheme" parent="Widget.MaterialComponents.Toolbar.Surface">
+        <item name="titleTextColor">@color/toolbarTitleColor</item>
+        <item name="subtitleTextColor">@color/toolbarSubtitleColor</item>
+        <item name="android:textColorSecondary">@color/toolbarItemColor</item> <!-- for menu items -->
     </style>
 
     <style name="Theme.SopaDeLetras2" parent="Base.Theme.SopaDeLetras2" />
