--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SopaDeLetras2" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/defaultBackgroundColor</item>
+    <style name="Base.Theme.SopaDeLetras" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/defaultPrimary</item>
         <item name="colorPrimaryVariant">@color/defaultBackgroundColorVariant</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/defaultTextColor</item>
+        <item name="colorOnPrimary">@color/defaultOnPrimary</item>
+        <item name="colorSecondary">@color/defaultSecondary</item>
         <item name="colorSecondaryVariant">@color/defaultTextColorVariant</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/defaultOnSecondary</item>
         <item name="android:windowBackground">@color/defaultBackgroundColor</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="toolbarStyle">@style/ToolbarTheme</item>
@@ -19,5 +19,5 @@
         <item name="android:textColorSecondary">@color/toolbarItemColor</item> <!-- for menu items -->
     </style>
 
-    <style name="Theme.SopaDeLetras2" parent="Base.Theme.SopaDeLetras2" />
+    <style name="Theme.SopaDeLetras" parent="Base.Theme.SopaDeLetras" />
 </resources>
