--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -10,4 +10,9 @@
         android:title="Info"
         android:icon="@android:drawable/ic_menu_preferences"
         android:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_privacy_policy"
+        android:title="Privacy Policy"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
